- BUG: Issue #160: Repo browser shows
       incorrect contents for directories
       that differ only by case. (Stefan)
- NEW: Issue #113: Option to turn off pre-fetching
       and external parsing in repo browser. (Stefan)
- BUG: Issue #161: repo browser shows invalid
       commands for the root. (Stefan)
- BUG: Line wrapping problems in Log
       Messages dialog. (Stefan)

Version 1.7.2
- BUG: Issue #111: Crash in initializing
       the revision graph. (Stefan)
- CHG: Issue #112: Unescaped urls in
       switch dialog. (Stefan)
- BUG: Issue #115: non-existing folder
       shown in repo browser. (Stefan)
- BUG: Issue #110 (again): Bogus entries in
       Language Combo on x64. (Stefan)
- BUG: Issue #116: Language Packs don't
       have the dialog resources translated. (Stefan)
- BUG: Issue #117: Property name has
       only one char. (Stefan)
- BUG: Issue #118: Impossible to remove
       properties from repo browser. (Stefan)
- BUG: Certificate Popups when smartcards
       are used. (Stefan)
- BUG: Issue #120: Copying part of URL
       copies entire URL in GUI. (Stefan)
- BUG: Issue #121: Authentication prompt when
       editing svn:externals. (Stefan)
- BUG: Issue #122: Column widths in
       repobrowser. (Stefan)
- BUG: Issue @123: Crash when switching from
       single to double pane view. (Stefan)
- BUG: Issue #124: painting artifact in
       commit dialog. (Stefan)
- BUG: Issue #125: missing conflict
       summary. (Stefan)
- BUG: Issue #126: crashes in repo browser. (Stefan)
- BUG: Issue #127: missing bug id in
       log dialog. (Stefan)
- BUG: Issue #130: out-of-date update
       misses dragged items. (Stefan)
- BUG: Issue #132: Cleanup fails to find
       externals in subfolders. (Stefan)
- BUG: Issue #133: crash in log dialog when
       "show only affected paths" is active. (Stefan)
- CHG: Issue #134: Show cached overlays
       for blocked paths. (Stefan)
- BUG: Issue #136: SubWCRev can use wrong